<resources>
    <string name="app_name">Karuna Pages</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loading">Loading&#8230;</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_listings">Listings</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="register_to_karuna_pages">Register to Karuna Pages</string>
    <string name="password">Password</string>
    <string name="no_account_register_here">No account? Register Here</string>
    <string name="email">Email</string>
    <string name="welcome_to_karuna_pages">Welcome to Karuna Pages</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="questions">Questions</string>
    <string name="my_listings">My Listings</string>
    <string name="reviews">Reviews</string>
    <string name="listing_claims">Listing Claims</string>
    <string name="listings">Listings</string>
    <string name="username">Username</string>
    <string name="category">Category</string>
</resources>